@@ -4,6 +4,9 @@ Changelog
 3.0a1 - unreleased
 ------------------
 
+* Better protection against corrupted internal data in ``_index_parents``.
+  [hannosch]
+
 * Slightly optimize reindexing an object by passing in information from the
   index to the unindex method and avoiding another unindex scan.
   [hannosch]
